<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_bg"
    tools:context="com.app.sorathiya.blooddonors.fragments.HomeFragment">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dimen_15"
        android:src="@mipmap/ic_launcher" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/frg_home_edt_blood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_icon"
        android:layout_margin="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@drawable/rounded_border"
        android:padding="@dimen/dimen_05">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/frg_home_edt_blood_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_add"
            android:drawablePadding="@dimen/dimen_05"
            android:focusable="false"
            android:hint="@string/txt_blood_group"
            android:padding="@dimen/dimen_05" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/lin_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_15"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/str_president"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/dimen_15"
                android:gravity="center"
                android:text="@string/str_secretary"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dimen_10"
            android:gravity="center"
            android:text="@string/str_chair_man"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/donate_blood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/lin_lay"
        android:layout_marginBottom="@dimen/dimen_05"
        android:gravity="center"
        android:text="Donate Blood Save Lives"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/donate_blood"
        android:layout_below="@id/frg_home_edt_blood"
        android:layout_marginBottom="@dimen/dimen_05"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/trust_name"
        android:textSize="16sp"
        android:textStyle="italic|bold" />
</RelativeLayout>
