<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frg_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="@drawable/activity_bg"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/dimen_20">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:background="@drawable/rounded_border"
                android:padding="@dimen/dimen_05">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_register_edt_name"
                    style="@style/Base.Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="@dimen/dimen_05"
                    android:hint="@string/hint_donor_name"
                    android:imeOptions="actionNext"
                    android:padding="@dimen/dimen_05" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@drawable/rounded_border"
                android:padding="@dimen/dimen_05">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_register_edt_blood_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_add"
                    android:drawablePadding="@dimen/dimen_05"
                    android:focusable="false"
                    android:hint="@string/txt_blood_group"
                    android:padding="@dimen/dimen_05" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@drawable/rounded_border"
                android:padding="@dimen/dimen_05">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_register_edt_contact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_contact"
                    android:drawablePadding="@dimen/dimen_05"
                    android:hint="@string/hint_contact"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="@dimen/dimen_05" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@drawable/rounded_border"
                android:padding="@dimen/dimen_05">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_register_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="@dimen/dimen_05"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dimen_05" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@drawable/rounded_border"
                android:padding="@dimen/dimen_05">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_register_edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_location"
                    android:drawablePadding="@dimen/dimen_05"
                    android:hint="@string/hint_address"
                    android:imeOptions="actionDone"
                    android:inputType="textPostalAddress"
                    android:padding="@dimen/dimen_05" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/frg_register_btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:background="@drawable/button_bg"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>