<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frg_contact_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="@drawable/activity_bg"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dimen_05"
    android:paddingLeft="@dimen/dimen_20"
    android:paddingRight="@dimen/dimen_20"
    android:paddingTop="@dimen/dimen_05">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@drawable/rounded_border"
                android:padding="@dimen/dimen_05">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_contact_us_edt_name"
                    style="@style/Base.Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="@dimen/dimen_05"
                    android:hint="@string/hint_name"
                    android:imeOptions="actionNext"
                    android:padding="@dimen/dimen_05" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@drawable/rounded_border"
                android:padding="@dimen/dimen_05">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_contact_us_edt_contact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_contact"
                    android:drawablePadding="@dimen/dimen_05"
                    android:hint="@string/hint_contact"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="@dimen/dimen_05" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@drawable/rounded_border"
                android:padding="@dimen/dimen_05">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_contact_us_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="@dimen/dimen_05"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dimen_05" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@drawable/rounded_border"
                android:padding="@dimen/dimen_05">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_contact_us_edt_msg"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_message"
                    android:drawablePadding="@dimen/dimen_05"
                    android:hint="@string/hint_message"
                    android:imeOptions="actionDone"
                    android:padding="@dimen/dimen_05" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_weight="1"
                android:background="@drawable/rounded_border"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_05">

                <TextView
                    android:id="@+id/frg_contact_us_txt_contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact_us_text"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:id="@+id/frg_contact_us_img_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_contact" />
            </LinearLayout>

            <Button
                android:id="@+id/frg_contact_us_btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15"
                android:background="@drawable/button_bg"
                android:paddingLeft="@dimen/dimen_05"
                android:paddingRight="@dimen/dimen_05"
                android:text="@string/send_message"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>